# RayTrace

./: CMakeLists.txt  README.md
res/Shaders/: AABB.fs  AABB.vs  compute_shader.glsl  quad.fs  quad.vs  ray_trace.glsl  ray_trace_multi.glsl
src/: Camera.h  Mesh.h  Model.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
src/core/: Utils.h
src/core/application/: App.cpp  App.h  InputHandler.cpp  InputHandler.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h
src/core/graphics/: Camera.cpp  Camera.h  Mesh.h  Model.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/core/gui/: Window.cpp  Window.h
src/scenes/: AABBScene.cpp  AABBScene.h  RayTraceScene.cpp  RayTraceScene.h  StencilScene.cpp  StencilScene.h
